hphp/hack/test/typecheck/expression_trees/property_access_error2.php.exp
File "property_access_error2.php", line 7, characters 12-32:
`ExampleInt` does not support this operator (it has no instance method named `__dot`) (Typing[4053])
